--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,47 @@
+/* Nav bar - Foundation */
 header {
     grid-area: header;
 }
 
-/* nav bar - Foundation */
+body {
+    background-color: #1B1725;
+}
+
+.container-header {
+    font-size: 50px;
+    color: #000;
+    background-color: #fff;
+    text-align: center;
+    margin: auto;
+    margin-top: 25px;
+    width: 50%;
+    border: 5px solid #fff;
+    padding: 10px;
+    font-family: 'BIZ UDGothic', sans-serif;
+}
+
+p {
+    text-align: center;
+    color: #fff;
+}
+
+form {
+    text-align: center;
+    margin: auto;
+    width: 70%;
+    border: 5px;
+    padding: 10px;
+}
+
+
+/* Nav Bar - Foundation */
+.branding {
+    font-family: 'BIZ UDGothic', sans-serif;
+    font-size: 25px;
+}
+
 .topbar-responsive {
-    background: #192A51;
+    background: #2E6171;
     padding: 1rem 1.5rem;
 }
 
@@ -14,7 +51,7 @@ header {
 }
 
 .topbar-responsive .menu {
-    background: #192A51;
+    background: #2E6171;
 }
 
 .topbar-responsive .menu li:last-of-type {
@@ -30,6 +67,7 @@ header {
     color: #c6d1d8;
 }
 
+/* MEDIA QUERY */
 @media screen and (max-width: 39.9375em) {
     .topbar-responsive .menu a {
         padding: 0.875rem 0;
@@ -126,7 +164,7 @@ header {
     }
 }
 
-@media screen and (max-width: 100%) {
+@media screen and (max-width: 39.9375em) {
     .topbar-responsive-links {
         -webkit-animation-fill-mode: both;
         animation-fill-mode: both;
@@ -138,49 +176,34 @@ header {
     }
 }
 
-/*  search bar container  and grid styling
+/* END OF MEDIA QUERY FOR NAV BAR */
 
-sidebar is going the same as results-showcase
-
-content is the same as results
-
-header is same, footer is the same*/
-section {
-    background: url(../img/denver1.webp) no-repeat 0 -400px url(../img/hockey1.jpeg) no-repeat 0 -400px url(../img/festival1.jpeg) no-repeat 0 -400px url(../img/theater.jpeg) no-repeat 0 -400px url(../img/showcase3.jpg) no-repeat 0 -400px;
-
-    color: white;
-    width: 100%;
-    height: 100%;
-    padding: 15%;
-    min-height: 400px;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    /* align-items: stretch; */
-}
-.wrapper{
+/* CSS GRID */
+.wrapper {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: 400px 600px 600px;
     grid-template-areas:
-    "header  header  header"
-    "sidebar results results"
-    "footer  footer  footer";
+        "header  header  header"
+        "sidebar results results"
+        "footer  footer  footer";
     background-color: #fff;
 }
-.results-showcase{
+
+.results-showcase {
     grid-area: sidebar;
 }
-.container-results{
+
+.container-results {
     grid-area: results;
     position: relative;
-};
+}
+
+;
 
 
-/* search bar  */
+/* Search Bar - Foundation */
+
 .input-group-rounded .input-group-field {
     border-radius: 5000px 0 0 5000px;
     padding-left: 1rem;
@@ -193,19 +216,70 @@ section {
 
 
 
-/* search results container */
 
+
+
+/* slider */
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Verdana, sans-serif;
+}
+
+.mySlides {
+    display: none;
+}
+
+img {
+    vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+.active {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+    .text {
+        font-size: 11px
+    }
+}
 
 /* footer */
 footer {
     grid-area: footer;
-    background: #192A51;
+    background: #2E6171;
     padding: 1rem 1.5rem;
     color: #F6F7EB;
     text-align: center;
     height: 100%;
 }
-
 
 /* @media  */
 @media(max-width:768px) {
@@ -230,7 +304,7 @@ img {
 }
 
 .showcase-container {
-    display:grid;
-    gap:10px;
-    padding:10px;
+    display: grid;
+    gap: 10px;
+    padding: 10px;
 }
