--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,12 +177,14 @@ form {
 }
 
 /* END OF MEDIA QUERY FOR NAV BAR */
+/* weather results */
+
 
 /* CSS GRID */
 .wrapper {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 400px 600px 600px;
+    grid-template-columns: 300px 300px 300px;
     grid-template-areas:
         "header  header  header"
         "sidebar results results"
