--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,11 @@ body {
 
 p {
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+}
+
+.results p {
+    color: black;
 }
 
 form {
